--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,9 +4,15 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :company_name,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "company name" }%>
+    <%= f.input :address,
+                required: true,
+                input_html: { autocomplete: "address" }%>
     <%= f.input :email,
                 required: true,
-                autofocus: true ,
                 input_html: { autocomplete: "email" }%>
     <%= f.input :password,
                 required: true,
@@ -14,7 +20,7 @@
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :password_confirmation,
                 required: true,
-                input_html: { autocomplete: "new-password" } %>
+                input_html: { autocomplete: "new password" } %>
   </div>
 
   <div class="form-actions">
