--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,63 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://kitt.lewagon.com/placeholder/cities/berlin');">
+  <div class="banner-content">
+    <h2>Commute better & save money</h2>
+    <p>We set up an intellegent transportation system to save you money and make your workers happier.</p>
+    <a class="btn btn-primary btn-lg">Start Today</a>
+  </div>
+</div>
+
+<div class="container">
+  <div id="how-it-works">
+    <div class="row">
+      <h3 class="text-center">How it works</h3>
+
+        <div class="col-xs-12 col-md-4">
+          <div class="card">
+              <i class="fa fa-cog"></i>
+              <h4 class="text-center">Upload Info</h4>
+              <p></p>
+          </div>
+        </div>
+
+        <div class="col-xs-12 col-md-4">
+          <i class="fa fa-cog"></i>
+          <h4 class="text-center">Get a route</h4>
+          <p></p>
+        </div>
+
+        <div class="col-xs-12 col-md-4">
+          <i class="fa fa-cog"></i>
+          <h4 class="text-center">Get routes</h4>
+          <p></p>
+        </div>
+    </div>
+  </div>
+  <div id="form">
+    <div class="container">
+
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= f.error_notification %>
+
+        <div class="form-inputs">
+          <%= f.input :email,
+                      required: true,
+                      autofocus: true ,
+                      input_html: { autocomplete: "email" }%>
+          <%= f.input :password,
+                      required: true,
+                      hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                      input_html: { autocomplete: "new-password" } %>
+          <%= f.input :password_confirmation,
+                      required: true,
+                      input_html: { autocomplete: "new-password" } %>
+        </div>
+
+        <div class="form-actions">
+          <%= f.button :submit, "Continue" %>
+        </div>
+      <% end %>
+
+    </div>
+  </div>
+</div>
