--- a/app/assets/stylesheets/layouts/_index.scss
+++ b/app/assets/stylesheets/layouts/_index.scss
@@ -1,5 +1,7 @@
 // Import your layouts CSS files here.
 // Examples:
-// @import "dashboard";
-// @import "profile";
-// @import "map";
+@import "dashboard";
+@import "profile";
+@import "map";
+@import "button";
+@import "footer";
