--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
   <div class="banner-content">
     <h2>Commute better & save money</h2>
     <p>We set up an intellegent transportation system to save you money and make your workers happier.</p>
-    <a class="btn btn-primary btn-lg">Start Today</a>
+    <a class="btn-carat-blue">Start Today</a>
   </div>
 </div>
 
@@ -33,31 +33,15 @@
         </div>
     </div>
   </div>
-  <div id="form">
-    <div class="container">
-
-      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%= f.error_notification %>
-
-        <div class="form-inputs">
-          <%= f.input :email,
-                      required: true,
-                      autofocus: true ,
-                      input_html: { autocomplete: "email" }%>
-          <%= f.input :password,
-                      required: true,
-                      hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                      input_html: { autocomplete: "new-password" } %>
-          <%= f.input :password_confirmation,
-                      required: true,
-                      input_html: { autocomplete: "new-password" } %>
-        </div>
-
-        <div class="form-actions">
-          <%= f.button :submit, "Continue" %>
-        </div>
-      <% end %>
-
-    </div>
+  <div class="footer">
+  <div class="footer-links">
+    <a href="#"><i class="fa fa-instagram"></i></a>
+    <a href="#"><i class="fa fa-facebook"></i></a>
+    <a href="#"><i class="fa fa-twitter"></i></a>
   </div>
+  <div class="footer-copyright">
+    Copyright® Carat App <i class="fa fa-heart"></i>
+  </div>
+</div>
+
 </div>
