--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,15 +1,28 @@
 .btn-carat-blue {
+  background-color: #FBF0AC;
   color: #364248;
-  border: 1px solid #999999;
   padding: 10px 15px;
   font-weight: lighter;
-  opacity: 0.6;
+  text-decoration: none;
+}
+
+.btn-carat-blue:hover {
+  background-color: #364248;
+  color: #F4D213;
+  text-decoration: none;
+  font-weight: lighter;
 }
 
 .btn-carat-yellow {
-  color: #364248;
-  border: 1px solid #999999;
+  background-color: #364248;
+  color: #F4D213;
   padding: 10px 15px;
   font-weight: lighter;
-  opacity: 0.6;
+}
+
+.btn-carat-yellow:hover {
+  background-color: #FBF0AC;
+  color: #364248;
+  font-weight: lighter;
+  text-decoration: none;
 }
