--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,6 +4,8 @@
     <h2>Commute better & save money</h2>
     <p>We set up an intellegent transportation system to save you money and make your workers happier.</p>
     <a class="btn-carat-blue">Start Today</a>
+
+    <a class="btn-carat-yellow">Get a Quote</a>
   </div>
 </div>
 
