--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,27 +1,21 @@
 .footer {
-  background: #F4F4F4;
+  background: #364248;
   display: flex;
+  color: #FBF0AC;
+  justify-content: center;
   align-items: center;
-  justify-content: space-between;
   height: 100px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
 }
-.footer-links {
-  display: flex;
-  align-items: center;
-}
+
 .footer-links a {
-  color: black;
-  opacity: 0.15;
+  color: #FBF0AC;
   text-decoration: none;
-  font-size: 24px;
-  padding: 0px 10px;
+  font-size: 40px;
+  padding: 15px;
 }
+
 .footer-links a:hover {
   opacity: 1;
 }
-.footer .fa-heart {
-  color: #D23333;
-}
-
