--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,27 +10,48 @@
 <div class="container">
   <div id="how-it-works">
     <div class="row">
-      <h3 class="text-center">How it works</h3>
+      <h3 class="text-center">HOW IT WORKS</h3>
+
+      <div class="wrapper-cards">
 
         <div class="col-xs-12 col-md-4">
-          <div class="card">
-              <i class="fa fa-cog"></i>
-              <h4 class="text-center">Upload Info</h4>
-              <p></p>
+          <div class="card text-center">
+            <div class="icon-circle">
+              <i class="fas fa-info"></i>
+            </div>
+            <div class="card-text">
+              <h4 class="how-heading">Upload Info</h4>
+              <p>You provide us with the location of your company and the employees you want brought to work.</p>
+            </div>
           </div>
         </div>
 
         <div class="col-xs-12 col-md-4">
-          <i class="fa fa-cog"></i>
-          <h4 class="text-center">Get a route</h4>
-          <p></p>
+          <div class="card text-center">
+            <div class="icon-circle">
+              <i class="fas fa-map-pin"></i>
+            </div>
+            <div class="card-text">
+              <h4 class="how-heading">Get a route</h4>
+              <p>Our algorithyms efficiently determine the optimum configuations to get your employees to work.</p>
+            </div>
+          </div>
         </div>
 
         <div class="col-xs-12 col-md-4">
-          <i class="fa fa-cog"></i>
-          <h4 class="text-center">Get routes</h4>
-          <p></p>
+          <div class="card text-center">
+            <div class="icon-circle">
+              <i class="fas fa-hand-holding-usd"></i>
+            </div>
+            <div class="card-text">
+              <h4 class="how-heading">Save & commute better</h4>
+              <p>Your company saves on transportation costs and your employees get to work comfortably and on time.</p>
+            </div>
+          </div>
         </div>
+
+      </div>
+
     </div>
   </div>
 </div>
