Aligning with master

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -38,7 +38,10 @@
       </div>
     <% else %>
       <!-- Login link (when logged out) -->
+      <%= link_to "How it Works", anchor: "how-it-works" %>
+
       <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
+
     <% end %>
   </div>
 
