--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -23,6 +23,7 @@
 
 #how-it-works {
   height: 100vh;
+  background-color: #FEFCEE;
 }
 
 #how-it-works h3 {
@@ -36,4 +37,5 @@
 
 .wrapper-cards {
   margin-top: 100px;
+  padding: 0px 100px;
 }
