--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,18 +1,21 @@
 
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://kitt.lewagon.com/placeholder/cities/berlin');">
-  <div class="banner-content">
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%) ;">
+  <div class="banner-content text-center">
     <h2>Commute better & save money</h2>
     <p>We set up an intellegent transportation system to save you money and make your workers happier.</p>
-    <a class="btn-carat-blue">Start Today</a>
+
+    <div class="button-style">
+      <a class="btn-carat-yellow">START TODAY</a>
+    </div>
   </div>
 </div>
 
-<div class="container">
+
   <div id="how-it-works">
     <div class="row">
       <h3 class="text-center">HOW IT WORKS</h3>
 
-      <div class="wrapper-cards">
+      <div class="wrapper-cards text-center">
 
         <div class="col-xs-12 col-md-4">
           <div class="card text-center">
@@ -50,9 +53,14 @@
           </div>
         </div>
 
+
+        <a class="btn-carat-blue text-center">Get a Quote</a>
+
+        <a href="#top"> <i class="fas fa-chevron-up"></i></a>
+
       </div>
 
     </div>
   </div>
-</div>
+
 
