--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,7 @@
 /* Main navbar */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
+  background: #364248;
   transition: all 0.3s ease;
   height: 70px;
   padding: 0px 30px;
@@ -36,12 +36,12 @@
 }
 
 /* Navbar link */
-.navbar-wagon-link {
-  color: #616668;
+.navbar-wagon-link a {
+  color: #FEFCEE;
   font-size: 14px;
 }
-.navbar-wagon-link:hover {
-  color: #da552f;
+.navbar-wagon-link:hover a {
+  color: #F4D213;
   text-decoration: none;
 }
 
@@ -74,4 +74,10 @@
   transform: rotate(45deg);
   border-left: 1px solid #E6E6E6;
   border-top: 1px solid #E6E6E6;
+}
+
+.logo-title {
+  font-size: 50px;
+  color: #F4D213;
+  font-family: $logo-font;
 }
