--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -20,3 +20,9 @@
   opacity: 0.6;
   margin-bottom: 30px;
 }
+
+.banner-content h2 {
+  font-family: $logo-font;
+  font-size: 50px;
+  color: #FBF0AC;
+}
