Buttons sprint, add/delete/edit btn style

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
     <p>We set up an intellegent transportation system to save you money and make your workers happier.</p>
 
     <div class="button-style">
-      <a class="btn-carat-yellow">START TODAY</a>
+      <a class="btn-carat-blue">START TODAY</a>
     </div>
   </div>
 </div>
@@ -54,9 +54,14 @@
         </div>
 
 
-        <a class="btn-carat-blue text-center">Get a Quote</a>
 
-        <a href="#top"> <i class="fas fa-chevron-up"></i></a>
+        <div class="back-to-top">
+          <a href="#top"> <i class="fas fa-chevron-up"></i></a>
+        </div>
+
+        <div class="button-style text-center">
+          <a class="btn-carat-blue">GET A QUOTE</a>
+        </div>
 
       </div>
 
