--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,7 +1,9 @@
-.btn-carat-yellow {
+// Carat Blue BTN
+
+.btn-carat-blue {
   background-color: #364248;
   letter-spacing: 2px;
-  color: #F4D213;
+  color: #FBF0AC;
   padding: 17px 15px;
   font-weight: lighter;
   text-decoration: none;
@@ -15,7 +17,7 @@
     transition-duration: 300ms;
     transition-timing-function: ease;
     transition-delay: 0s;
-     background-color: #F4D213;
+     background-color: #FBF0AC;
     color: #364248;
     text-decoration: none;
     font-weight: lighter;
@@ -40,3 +42,109 @@
     font-weight: lighter;
   }
 }
+
+// Carat Yellow BTN
+
+.btn-carat-yellow {
+  background-color: #F4D213;
+  letter-spacing: 2px;
+  color: #364248;
+  padding: 17px 15px;
+  font-weight: lighter;
+  text-decoration: none;
+  position: absolute;
+  width: 100%;
+  top: -12px;
+  right: 9px;
+  &:hover {
+    transition: background-color 300ms ease;
+    transition-property: background-color;
+    transition-duration: 300ms;
+    transition-timing-function: ease;
+    transition-delay: 0s;
+     background-color: #364248 ;
+    color: #F4D213;
+    text-decoration: none;
+    font-weight: lighter;
+  }
+}
+
+.button-style {
+  position: relative; left: calc(50% - 89px);
+  width: 171px;
+  height: 62px;
+  border-right: 3px solid #364248;
+  border-bottom: 3px solid #364248;
+  &:hover {
+    transition: background-color 300ms ease;
+    transition-property: background-color;
+    transition-duration: 300ms;
+    transition-timing-function: ease;
+    transition-delay: 0s;
+    background-color: #364248;
+    color: #F4D213;
+    text-decoration: none;
+    font-weight: lighter;
+  }
+}
+
+//Carat Regulars
+
+.btn-carat-add {
+  color: #364248;
+  letter-spacing: 2px;
+  border: 1px solid #364248;
+  padding: 10px 15px;
+  font-weight: lighter;
+  opacity: 0.7;
+}
+
+.btn-carat-add:hover {
+  opacity: 1;
+  letter-spacing: 2px;
+  text-decoration: none;
+  color: #364248;
+}
+
+.btn-carat-delete {
+  background-color: $red;
+  letter-spacing: 2px;
+  color: white;
+  padding: 10px 15px;
+  font-weight: lighter;
+  opacity: 0.8;
+}
+
+.btn-carat-delete:hover {
+  color: white;
+  opacity: 1;
+  letter-spacing: 2px;
+  text-decoration: none;
+}
+
+.back-to-top {
+  font-size: 50px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
