--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -55,17 +55,21 @@
 
 
 
-        <div class="back-to-top">
-          <a href="#top"> <i class="fas fa-chevron-up"></i></a>
-        </div>
-
-        <div class="button-style text-center">
-          <a class="btn-carat-blue">GET A QUOTE</a>
-        </div>
-
       </div>
 
+
     </div>
+
+           <div class="btn-box">
+          <div class="button-style text-center">
+            <a class="btn-carat-blue">GET A QUOTE</a>
+          </div>
+
+          <div class="back-to-top text-center">
+            <a href="#top"> <i class="fas fa-chevron-up"></i></a>
+          </div>
+        </div>
+
   </div>
 
 
