--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -17,10 +17,11 @@
     transition-duration: 300ms;
     transition-timing-function: ease;
     transition-delay: 0s;
-     background-color: #FBF0AC;
+    background-color: #FBF0AC;
     color: #364248;
     text-decoration: none;
     font-weight: lighter;
+    cursor: pointer;
   }
 }
 
@@ -70,7 +71,7 @@
 }
 
 .button-style {
-  position: relative; left: calc(50% - 89px);
+  // position: relative; left: calc(50% - 89px);
   width: 171px;
   height: 62px;
   border-right: 3px solid #364248;
@@ -89,6 +90,26 @@
 }
 
 //Carat Regulars
+
+.btn-carat-regular {
+  background-color: #364248;
+  color: #FBF0AC;
+  border-radius: 0px;
+  letter-spacing: 2px;
+  border: 1px solid #364248;
+  padding: 10px 15px;
+  font-weight: lighter;
+  opacity: 0.7;
+}
+
+.btn-carat-regular:hover {
+  background-color: #364248;
+  color: #F4D213;
+  border-radius: 0px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  opacity: 1;
+}
 
 .btn-carat-add {
   color: #364248;
@@ -123,7 +144,12 @@
 }
 
 .back-to-top {
+  margin-top: 70px;
   font-size: 50px;
+  color: #364248;
+  &:hover {
+    color: #F4D213;
+  }
 }
 
 
