--- a/app/assets/stylesheets/components/_login_form.scss
+++ b/app/assets/stylesheets/components/_login_form.scss
@@ -18,5 +18,11 @@
   .font{
     color: #364248;
   }
+}
 
+.form-title {
+  font-size: 60px;
+  color: #364248;
+  font-family: $body-font;
+  font-weight: 700;
 }
