Added photo to banner and fix chevron

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,6 +3,7 @@
   color: white;
   text-align: center;
   height: calc(100vh - 70px);
+  background-image: url('/assets/images/bg_photo.jpg');
   background-size: cover !important;
   display: flex;
   align-items: center;
