--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -143,12 +143,14 @@
   text-decoration: none;
 }
 
-.back-to-top {
-  margin-top: 70px;
+.back-to-top a {
   font-size: 50px;
   color: #364248;
   &:hover {
     color: #F4D213;
+  }
+  i {
+    margin-top: 100px;
   }
 }
 
