--- a/app/views/employees/_employee_card.html.erb
+++ b/app/views/employees/_employee_card.html.erb
@@ -1,17 +1,11 @@
-<div class="employee-card">
+<div class="employee-card" id="<%= @e.id %>">
   <div>
-    <div class="employee-name"><%= e.name %></div>
-    <div class="employee-address"><%= e.address %></div>
+    <div class="employee-name"><%= @e.name %></div>
+    <div class="employee-address"><%= @e.address %></div>
   </div>
 
-  <div class="dropdown">
-    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-      <span class="caret"></span>
-    </button>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-      <li><%= link_to "Edit", edit_employee_path(e) %></li>
-      <li><%= link_to "Delete", employee_path(e), method: :delete,
-      data: { confirm: "Are you sure?" } %></li>
-    </ul>
+  <div>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target='<%= "#editModal#{@e.id}" %>'> Edit employee </button>
+    <%= render "edit_modal", e: @e %>
   </div>
 </div>
