--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,13 @@
-
 <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://scontent.frao1-1.fna.fbcdn.net/v/t1.0-9/39913653_10100165725417274_152167654755401728_n.jpg?_nc_cat=0&oh=09a4d4858034af744d84c5973991ef85&oe=5C05C89A');">
   <div class="banner-content text-center">
     <h2>Commute better & save money</h2>
     <p>We set up an intellegent transportation system to save you money and make your workers happier.</p>
 
     <div class="button-style">
-      <a class="btn-carat-blue">START TODAY</a>
+      <%= link_to "START TODAY", dashboard_path, class: "btn-carat-blue" %>
     </div>
   </div>
 </div>
-
 
   <div id="how-it-works">
     <div class="row">
@@ -52,24 +50,19 @@
             </div>
           </div>
         </div>
-
-
-
       </div>
 
 
     </div>
 
-           <div class="btn-box">
-          <div class="button-style text-center">
-            <a class="btn-carat-blue">GET A QUOTE</a>
-          </div>
+        <div class="btn-box">
+        <div class="button-style text-center">
+          <%= link_to "GET A QUOTE", dashboard_path, class: "btn-carat-blue" %>
+        </div>
 
-          <div class="back-to-top text-center">
-            <a href="#top"> <i class="fas fa-chevron-up"></i></a>
-          </div>
+        <div class="back-to-top text-center">
+          <a href="#top"> <i class="fas fa-chevron-up"></i></a>
+        </div>
         </div>
 
   </div>
-
-
