--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,18 +2,19 @@
 .banner {
   color: white;
   text-align: center;
-  height: calc(100vh - 70px);
-  background-image: url('/assets/images/bg_photo.jpg');
-  background-size: cover !important;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-size: cover;
+  height: 100vh;
 }
+
 .banner h1 {
   font-size: 50px;
   font-weight: bold;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
 }
+
 .banner p {
   font-size: 25px;
   font-weight: lighter;
@@ -27,3 +28,4 @@
   font-size: 50px;
   color: #FBF0AC;
 }
+
