--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,7 @@
 
       <div class="wrapper-cards text-center">
 
-        <div class="col-xs-12 col-md-4">
+        <div class="col-xs-12 col-sm-4">
           <div class="card text-center">
             <div class="icon-circle">
               <i class="fas fa-info"></i>
@@ -29,7 +29,7 @@
           </div>
         </div>
 
-        <div class="col-xs-12 col-md-4">
+        <div class="col-xs-12 col-sm-4">
           <div class="card text-center">
             <div class="icon-circle">
               <i class="fas fa-map-pin"></i>
@@ -41,7 +41,7 @@
           </div>
         </div>
 
-        <div class="col-xs-12 col-md-4">
+        <div class="col-xs-12 col-sm-4">
           <div class="card text-center">
             <div class="icon-circle">
               <i class="fas fa-hand-holding-usd"></i>
@@ -53,22 +53,20 @@
           </div>
         </div>
 
-
-
       </div>
 
 
     </div>
 
-           <div class="btn-box">
-          <div class="button-style text-center">
-            <a class="btn-carat-blue">GET A QUOTE</a>
-          </div>
-
-          <div class="back-to-top text-center">
-            <a href="#top"> <i class="fas fa-chevron-up"></i></a>
-          </div>
+      <div class="btn-box">
+        <div class="button-style text-center">
+          <a class="btn-carat-blue">GET A QUOTE</a>
         </div>
+
+        <div class="back-to-top text-center">
+          <a href="#top"><i id="top-chevron" class="fas fa-chevron-up"></i></a>
+        </div>
+      </div>
 
   </div>
 
