--- a/app/views/employees/dashboard.html.erb
+++ b/app/views/employees/dashboard.html.erb
@@ -7,7 +7,7 @@
     </div>
 
     <div>
-      <a class=“btn-carat-blue text-center”>Upload CSV</a>
+      <button type="button" class="btn-carat-add">Upload CSV</a>
     </div>
 
 <!--   need to have different views here for login or not login
@@ -18,7 +18,7 @@
 
     <div>
       <!-- Button trigger modal -->
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal"> Add employee </button> <%= render "add_modal" %>
+      <button type="button" class="btn-carat-add" data-toggle="modal" data-target="#addModal"> Add employee </button> <%= render "add_modal" %>
     </div>
 
     <div>
