--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -29,3 +29,19 @@
   color: #FBF0AC;
 }
 
+html, body {
+  height: 100%;
+}
+
+// .body {
+//   display: flex;
+//   flex-direction: column;
+// }
+
+// .content {
+//   flex: 1 0 auto;
+// }
+
+// .footer {
+//   flex-shrink: 0;
+// }
