--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -35,7 +35,14 @@
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <li><%= link_to "Your Dashboard", dashboard_path, class: "navbar-wagon-item navbar-wagon-link" %></li>
 
-        <li><%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "navbar-wagon-item navbar-wagon-link" %></li>
+
+        <% if user_signed_in? %>
+          <li><%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "navbar-wagon-item navbar-wagon-link" %></li>
+          <% else %>
+          <li><%= link_to t(".sign_in", default: "Login"), new_user_session_path , class: "navbar-wagon-item navbar-wagon-link" %></li>
+        <% end %>
+
+
       </ul>
     </div>
   </div>
