--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,4 +1,8 @@
 /* Main navbar */
+.content-padding {
+  padding-top: 70px
+}
+
 .navbar-wagon-home {
   background-color: transparent;
   transition: 0.3s ease;
