--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
       <p>We set up an intellegent transportation system to save you money and make your workers happier.</p>
 
       <div class="button-style">
-        <%= link_to "START TODAY", dashboard_path, class: "btn-carat-blue" %>
+        <%= link_to "START TODAY", new_user_registration_path, class: "btn-carat-blue" %>
       </div>
     </div>
   </div>
