--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
     <%= render 'shared/navbar' %>
 
-    <div class="sticky-footer">
+    <div class="sticky-footer <%= controller_name == 'pages' ? '' : 'content-padding' %>">
       <%= yield %>
     </div>
 
