--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar-fixed-top <%= current_page?(root_path) ? "navbar-wagon-home" : "navbar-wagon" %>">
+<div class="navbar-fixed-top <%= controller_name == 'pages' ? "navbar-wagon-home" : "navbar-wagon" %>">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
     <div class="logo-title">
@@ -13,7 +13,6 @@
 
       <!-- Links when logged in -->
 
-      <%= link_to "Your Dashboard", dashboard_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to destroy_user_session_path, method: :delete do %>
         <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
       <% end %>
@@ -33,9 +32,6 @@
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><%= link_to "Your Dashboard", dashboard_path, class: "navbar-wagon-item navbar-wagon-link" %></li>
-
-
         <% if user_signed_in? %>
           <li><%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "navbar-wagon-item navbar-wagon-link" %></li>
           <% else %>
