--- a/app/views/employees/_employee_card.html.erb
+++ b/app/views/employees/_employee_card.html.erb
@@ -1,16 +1,16 @@
 <div class="employee-card" id="<%= @e.id %>">
   <div>
-    <div class="employee-name"><%= @e.name %></div>
+    <div class="employee-name"><strong><%= @e.name %></strong></div>
     <div class="employee-address"><%= @e.address %></div>
   </div>
 
-  <div class="row">
-    <button type="button" class="btn-carat-add" data-toggle="modal" data-target='<%= "#editModal#{@e.id}" %>'> EDIT </button>
-
+  <div>
+    <a href='#' data-toggle="modal" data-target='<%= "#editModal#{@e.id}" %>'>EDIT</a>
+    &nbsp;
     <%= link_to "DELETE", employee_path(e),
       method: :delete,
-      data: { confirm: "Are you sure?" },
-      class: "btn-carat-delete" %>
+      data: { confirm: "Are you sure?" } %>
+      <%= render "edit_modal", e: @e %>
   </div>
-    <%= render "edit_modal", e: @e %>
+  <hr>
 </div>
