--- a/app/views/employees/dashboard.html.erb
+++ b/app/views/employees/dashboard.html.erb
@@ -1,45 +1,43 @@
+
 <div class="row">
+
   <div class="col-sm-4">
-    <div>
-      <h3><%= @user.company_name %></h3>
-      <p><%= @user.address %></p>
-      <p><%= @user.email %></p>
-    </div>
-
-    <div>
-      <button type="button" class="btn-carat-add">Upload CSV</a>
-    </div>
-
-<!--   need to have different views here for login or not login
- -->
-    <div>
-      <p><strong>Or</strong></p>
-    </div>
-
-    <div>
-      <!-- Button trigger modal -->
-      <button type="button" class="btn-carat-add" data-toggle="modal" data-target="#addModal"> Add employee </button> <%= render "add_modal" %>
-    </div>
-
-    <div>
-      <div id="employee-list">
-        <p><strong>Your employees</strong></p>
-        <% @employees.each do |e| %>
-          <% @e = e %>
-          <%= render 'employee_card', e: @e %>
-        <% end %>
+    <div class="column-padding">
+      <div>
+        <h3><%= @user.company_name %></h3>
+        <p>
+          <i class="fas fa-map-marker-alt"></i>
+          <%= @user.address %>
+        </p>
+        <p>
+          <i class="fas fa-envelope"></i>
+          <%= @user.email %>
+        </p>
       </div>
+      <div class="text-center">
+        <button type="button" class="btn-carat-regular">UPLOAD CSV</a>
+        <button type="button" class="btn-carat-add" data-toggle="modal" data-target="#addModal"> ADD MANUALLY </button> <%= render "add_modal" %>
+      </div>
+      <hr>
+  <!--   need to have different views here for login or not login-->
+      <div>
+        <!-- Button trigger modal -->
+        <div id="employee-list">
+          <h3>Employees List</h3>
+          <% @employees.each do |e| %>
+            <% @e = e %>
+            <%= render 'employee_card', e: @e %>
+          <% end %>
+        </div>
+      </div>
+
     </div>
   </div>
 
   <div class="col-sm-8">
-    <div
-      id="map"
-      style="width: 100%;
-      height: 600px;"
-      data-markers="<%= @markers.to_json %>"
-    ></div>
+    <div id="map" data-markers="<%= @markers.to_json %>"></div>
   </div>
+
 </div>
 
 
