Fix indentation of column padding on dashboard

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -4,5 +4,19 @@
 }
 
 .column-padding {
+  margin-left: 20px;
+  p {
+  font-size: 15px;
   margin-left: 10px;
+  color: #364248;
+  }
+  h3 {
+    font-size: 24px;
+    font-weight: bold;
+    color: #364248;
+    padding-bottom: 10px;
+  }
+
+
 }
+
