--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -99,7 +99,7 @@
   border: 1px solid #364248;
   padding: 10px 15px;
   font-weight: lighter;
-  opacity: 0.7;
+  opacity: 0.8;
 }
 
 .btn-carat-regular:hover {
@@ -112,7 +112,9 @@
 }
 
 .btn-carat-add {
+  margin: 10px;
   color: #364248;
+  background-color: #FEFCEE;
   letter-spacing: 2px;
   border: 1px solid #364248;
   padding: 10px 15px;
@@ -121,6 +123,7 @@
 }
 
 .btn-carat-add:hover {
+  margin: 10px;
   opacity: 1;
   letter-spacing: 2px;
   text-decoration: none;
