Still can't make the footer sticky

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -24,11 +24,10 @@
 #how-it-works {
   height: 100vh;
   background-color: #FEFCEE;
-}
-
-#how-it-works h3 {
+  h3 {
   margin-top: 100px;
   font-weight: 700;
+  }
 }
 
 .card .card-text h4 {
