--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer">
+<div class="footer down">
 
     <div class="footer-links text-center">
       <a href="#"><i class="fab fa-linkedin"></i></a>
@@ -6,6 +6,6 @@
       <a href="#"><i class="fab fa-twitter-square"></i></i></a>
     </div>
 
-  </div>
+</div>
 
 
