--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@
 
         <div class="col-xs-12 col-sm-4">
           <div class="card text-center">
-            <div class="icon-circle">
+            <div class="icon-circle icon">
               <i class="fas fa-info"></i>
             </div>
             <div class="card-text">
