--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -112,6 +112,8 @@
 }
 
 .btn-carat-add {
+  margin: 0 10px;
+  background-color: #FEFCEE;
   color: #364248;
   letter-spacing: 2px;
   border: 1px solid #364248;
