--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -21,6 +21,13 @@
   padding-top: 25px;
 }
 
+// .icon {
+//  height: 30px;
+//  fill: #364248;
+//  position: absolute;
+//  left: 50%;
+// }
+
 #how-it-works {
   height: 100vh;
   background-color: #FEFCEE;
@@ -39,3 +46,59 @@
   margin-top: 100px;
   padding: 0px 100px;
 }
+
+
+.card-reward {
+  background-color: #FBF0AC;
+  color: #364248;
+  padding: 20px 20px;
+  width: 300px;
+  margin: 20px 20px;
+  i {
+    color: #364248;
+    font-size: 45px;
+    padding-top: 25px;
+  }
+}
+
+.order-summary {
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  h3 {
+    color: #364248;
+    font-size: 24px;
+    font-weight: bold;
+    margin-left: 30px;
+    margin-bottom: 20px;
+  }
+  p {
+    margin-left: 30px;
+    color: #364248;
+    font-size: 15px;
+  }
+  i {
+    margin: 0 10px;
+    color: #364248;
+  }
+}
+
+.box-right {
+  margin-left: 100px;
+
+}
+
+.box-left {
+  margin-right: -240px;
+}
+
+
+
+
+
+
+
+
+
+
