--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -5,4 +5,12 @@
 
 .column-padding {
   margin-left: 10px;
+  padding-top: 70px;
+  h3 {
+    font-weight: bold;
+    font-size: 24px;
+  }
+  p {
+    margin-left: 20px;
+  }
 }
