--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar-fixed-top <%= controller_name == 'pages' ? "navbar-wagon-home" : "navbar-wagon" %>">
+<div class="navbar-fixed-top <%= current_page?('/') && !user_signed_in? ? "navbar-wagon-home" : "navbar-wagon" %>">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
     <div class="logo-title">
