--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,14 +12,14 @@
 
   <div id="how-it-works">
     <div class="row">
-      <h3 class="text-center">HOW IT WORKS</h3>
+      <h3 class="text-center">How it Works</h3>
 
       <div class="wrapper-cards text-center">
 
         <div class="col-xs-12 col-sm-4">
           <div class="card text-center">
             <div class="icon-circle icon">
-              <i class="fas fa-info"></i>
+              <%= image_tag "information.svg", class:"icons text-center" %>
             </div>
             <div class="card-text">
               <h4 class="how-heading">Upload Info</h4>
@@ -31,7 +31,7 @@
         <div class="col-xs-12 col-sm-4">
           <div class="card text-center">
             <div class="icon-circle">
-              <i class="fas fa-map-pin"></i>
+              <%= image_tag "route.svg", class:"icons text-center" %>
             </div>
             <div class="card-text">
               <h4 class="how-heading">Get a route</h4>
@@ -43,7 +43,7 @@
         <div class="col-xs-12 col-sm-4">
           <div class="card text-center">
             <div class="icon-circle">
-              <i class="fas fa-hand-holding-usd"></i>
+              <%= image_tag "school-bus.svg", class:"icons text-center" %>
             </div>
             <div class="card-text">
               <h4 class="how-heading">Save & commute better</h4>
@@ -59,7 +59,8 @@
         <a class="btn-carat-blue">GET A QUOTE</a>
       </div>
       <div class="back-to-top text-center">
-        <a href="#top"><i id="top-chevron" class="fas fa-chevron-up"></i></a>
+        <%= image_tag "chevron.svg", class:"icons text-center" %>
+        <!-- <a href="#top"><i id="top-chevron" class="fas fa-chevron-up"></i></a> -->
       </div>
     </div>
 
