--- a/app/views/pages/rewards.html.erb
+++ b/app/views/pages/rewards.html.erb
@@ -5,7 +5,7 @@
 
       <div class="col-xs-12 col-sm-4 col-md-4">
         <div class="card-reward text-center">
-          <i class="fas fa-money-bill-alt"></i>
+          <%= image_tag "piggy-bank.svg", class:"icons text-center" %>
 
           <div class="card-text">
             <h3><strong>$ 40,000</strong></h3>
@@ -15,8 +15,8 @@
       </div>
 
       <div class="col-xs-12 col-sm-4 col-md-4">
-        <div class="card-reward text-center">
-          <i class="fas fa-stopwatch"></i>
+        <div class="card card-reward text-center">
+          <%= image_tag "stopwatch.svg", class:"icons text-center" %>
 
           <div class="card-text">
             <h3><strong>10,000h</strong></h3>
@@ -26,8 +26,8 @@
       </div>
 
       <div class="col-xs-12 col-sm-4 col-md-4">
-        <div class="card-reward text-center">
-          <i class="fas fa-leaf"></i>
+        <div class="card card-reward text-center">
+         <%= image_tag "footprint.svg", class:"icons text-center" %>
 
           <div class="card-text">
             <h3><strong>5 tons</strong></h3>
