--- a/app/views/employees/_upload_modal.html.erb
+++ b/app/views/employees/_upload_modal.html.erb
@@ -9,10 +9,12 @@
         </button>
       </div>
       <div class="modal-body">
-      <%= form_tag({ controller: 'employees', action: 'parse'}, multipart: true, method: "post") do %>
+
+      <%= form_tag({ controller: 'employees', action: 'parse'}, remote: true, multipart: true, method: "post") do %>
         <div class="form-group">
           <%= file_field_tag :csv_file %>
         </div>
+
       </div>
       <div class="modal-footer">
         <button id="close-button" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
