--- a/app/assets/stylesheets/layouts/_map.scss
+++ b/app/assets/stylesheets/layouts/_map.scss
@@ -7,3 +7,7 @@
   position: sticky !important; /* !important to override Gmaps inline CSS */
   top: 0 !important;
 }
+
+.pac-container {
+  z-index: 10000 !important;
+}
