--- a/app/views/employees/_edit_modal.html.erb
+++ b/app/views/employees/_edit_modal.html.erb
@@ -11,7 +11,7 @@
         </div>
         <div class="modal-body">
           <%= f.input :name %>
-          <%= f.input :address %>
+          <%= f.input :address, input_html: { id: "employee_address_edit" } %>
         </div>
         <div class="modal-footer">
           <%= f.button :submit, class: "btn btn-primary" %>
