--- a/app/views/employees/dashboard.html.erb
+++ b/app/views/employees/dashboard.html.erb
@@ -1,4 +1,3 @@
-
 <div class="row">
 
   <div class="col-sm-4">
@@ -15,30 +14,52 @@
         </p>
       </div>
       <div class="text-center">
-        <button type="button" class="btn-carat-regular" data-toggle="modal" data-target="#uploadModal"> UPLOAD CSV </button> <%= render "upload_modal" %>
-
+        <button type="button" class="btn-carat-regular">UPLOAD CSV</button>
+          <%= form_for @employee, url: { controller: 'employees', action: 'parse', method: :post } do |f| %>
+          <div class="form-group">
+            <%= f.file_field :csv_file, class: 'form-control' %>
+            <%= f.submit :submit, class: 'form-control' %>
+          </div>
+          <% end %>
+        <button type="button" class="btn-carat-add" data-toggle="modal" data-target="#addModal"> ADD MANUALLY </button> <%= render "add_modal" %>
       </div>
       <hr>
   <!--   need to have different views here for login or not login-->
-
+      <div>
         <!-- Button trigger modal -->
         <div id="employee-list">
-          <h3>Employees List</h3><button type="button" class="btn-carat-add" data-toggle="modal" data-target="#addModal">+</button> <%= render "add_modal" %>
+          <h3>Employees List</h3>
           <% @employees.each do |e| %>
             <% @e = e %>
             <%= render 'employee_card', e: @e %>
           <% end %>
-
-          <%= link_to "SEE REWARDS", rewards_path, class: "btn-carat-regular" %>
         </div>
+      </div>
 
     </div>
   </div>
 
+  path=color:0x0000ff|weight:5|40.737102,-73.990318|40.749825,-73.987963|40.752946,-73.987384|40.755823,-73.986397
   <div class="col-sm-8">
     <div id="map" data-markers="<%= @markers.to_json %>"></div>
   </div>
 
 </div>
 
+<% str = "https://www.google.com/maps/embed/v1/directions?key=AIzaSyDZHlBpRsMyKbCT8QQu2IhHHmiVswm4BLM&" %>
 
+<% locations = [] %>
+<% @user.employees.each do |employee| %>
+  <% locations << "#{employee.latitude},#{employee.longitude}|"%>
+<% end %>
+
+<%= locations %>
+
+https://maps.googleapis.com/maps/api/staticmap?path=color:0x0000ff%7Cweight:5%7C40.737102,-73.990318%7C40.749825,-73.987963%7C40.752946,-73.987384%7C40.755823,-73.986397&size=512x512&key=AIzaSyDIJ9XX2ZvRKCJcFRrl-lRanEtFUow4piM&signature=WDog7uhBuLyF26dwSv7XCsOLEj8=
+
+https://www.google.com/maps/embed/v1/directions
+  ?key=AIzaSyDZHlBpRsMyKbCT8QQu2IhHHmiVswm4BLM
+  &origin=Oslo+Norway
+  &destination=Telemark+Norway
+  &waypoint=Gransherad+Norway
+  &avoid=tolls|highways
