--- a/app/views/employees/_upload_modal.html.erb
+++ b/app/views/employees/_upload_modal.html.erb
@@ -17,7 +17,7 @@
 
       </div>
       <div class="modal-footer">
-        <button id="close-button" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button id="csv-close-button" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             <%= submit_tag "submit" %>
          <% end %>
       </div>
