--- a/app/views/employees/update.js.erb
+++ b/app/views/employees/update.js.erb
@@ -1,26 +1,24 @@
 function refreshForm() {
   const newEmployeeName = document.getElementById('employee_name');
-  const newEmployeeAddress = document.getElementById('employee_address');
+  const newEmployeeAddress = document.getElementById('employee_address_edit');
   newEmployeeName.value = "";
   newEmployeeAddress.value = "";
 }
 
 function updateEmployee(employeeHTML) {
   const employeeList = document.getElementById('employee-list');
-  const employee = document.getElementById('<%= @employee.id %>');
+  const employee = document.getElementById('emp<%= @employee.id %>');
   employee.parentNode.removeChild(employee);
   employeeList.insertAdjacentHTML('beforeend', employeeHTML);
 }
 
-var closeBtn = document.getElementById('close<%= @employee.id %>')
+var editCloseBtn = document.getElementById('edit-close<%= @employee.id %>');
 
 <% if @employee.errors.any? %>
 
-  console.log("error")
+  console.log("error");
 <% else %>
-  <% @e = @employee %>
-  updateEmployee('<%= j render "employee_card", e: @e %>');
-  closeBtn.click()
+  updateEmployee('<%= j render "employee_card", e: @employee %>');
+  editCloseBtn.click();
   refreshForm();
-  // refreshForm();
 <% end %>
