--- a/app/views/employees/_add_modal.html.erb
+++ b/app/views/employees/_add_modal.html.erb
@@ -16,7 +16,7 @@
 
       </div>
       <div class="modal-footer">
-        <button id="close-button" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button id="add-close-button" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <%= f.button :submit, class: "btn btn-primary" %>
          <% end %>
       </div>
