--- a/app/views/employees/_edit_modal.html.erb
+++ b/app/views/employees/_edit_modal.html.erb
@@ -1,7 +1,7 @@
-<div class="modal fade" id='<%= "editModal#{@e.id}" %>' tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="false">
+<div class="modal fade" id='<%= "editModal#{e.id}" %>' tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="false">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <%= simple_form_for(@e, method: :patch, remote: true) do |f| %>
+      <%= simple_form_for(e, method: :patch, remote: true) do |f| %>
         <div class="modal-header">
           <h5 class="modal-title" id="editModalLabel">Edit employee
           </h5>
@@ -15,7 +15,7 @@
         </div>
         <div class="modal-footer">
           <%= f.button :submit, class: "btn btn-primary" %>
-          <button id="close<%= e.id %>" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button id="edit-close<%= e.id %>" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
       <% end %>
     </div>
