--- a/app/views/employees/dashboard.html.erb
+++ b/app/views/employees/dashboard.html.erb
@@ -14,13 +14,13 @@
         </p>
       </div>
       <div class="text-center">
-        <button type="button" class="btn-carat-regular">UPLOAD CSV</button>
-          <%= form_for @employee, url: { controller: 'employees', action: 'parse', method: :post } do |f| %>
-          <div class="form-group">
-            <%= f.file_field :csv_file, class: 'form-control' %>
-            <%= f.submit :submit, class: 'form-control' %>
-          </div>
-          <% end %>
+
+
+
+        <button type="button" class="btn-carat-regular" data-toggle="modal" data-target="#uploadModal"> UPLOAD CSV </button> <%= render "upload_modal" %>
+
+
+
         <button type="button" class="btn-carat-add" data-toggle="modal" data-target="#addModal"> ADD MANUALLY </button> <%= render "add_modal" %>
       </div>
       <hr>
@@ -30,8 +30,7 @@
         <div id="employee-list">
           <h3>Employees List</h3>
           <% @employees.each do |e| %>
-            <% @e = e %>
-            <%= render 'employee_card', e: @e %>
+            <%= render 'employee_card', e: e %>
           <% end %>
         </div>
       </div>
