--- a/app/views/employees/dashboard.html.erb
+++ b/app/views/employees/dashboard.html.erb
@@ -15,11 +15,7 @@
       </div>
       <div class="text-center">
 
-
-
         <button type="button" class="btn-carat-regular" data-toggle="modal" data-target="#uploadModal"> UPLOAD CSV </button> <%= render "upload_modal" %>
-
-
 
         <button type="button" class="btn-carat-add" data-toggle="modal" data-target="#addModal"> ADD MANUALLY </button> <%= render "add_modal" %>
       </div>
@@ -43,6 +39,10 @@
   </div>
 
 </div>
+
+<button id="init-map" class="hide">
+  map
+</button>
 
 
 
