--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,6 +10,8 @@
     </div>
   </div>
 
+<div class="container">
+
   <div id="how-it-works">
     <div class="row">
       <h3 class="text-center">How it Works</h3>
@@ -54,6 +56,7 @@
       </div>
     </div>
 
+</div>
     <div class="btn-box">
       <div class="button-style text-center">
         <a class="btn-carat-blue">GET A QUOTE</a>
