Fixed home page buttons

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -150,11 +150,20 @@
   text-decoration: none;
 }
 
-.back-to-top a {
-  font-size: 50px;
-  color: #364248;
-  &:hover {
-    color: #F4D213;
+.flex-center {
+  display: flex;
+  justify-content: center;
+}
+
+.back-to-top {
+   display: block;
+  a {
+
+    font-size: 50px;
+    color: #364248;
+    &:hover {
+      color: #F4D213;
+    }
   }
   i {
     margin-top: auto;
