--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,9 +11,9 @@
 
 <div id="how-it-works">
 
-   <h3 class="text-center">How it Works</h3>
 
   <div class="row">
+   <h3 class="text-center">How it Works</h3>
 
 
    <!--  <div class="wrapper-cards text-center"> -->
@@ -58,12 +58,16 @@
 
   </div>
 
-  <div class="row">
+  <div class="flex-center">
 
-      <div class="back-to-top text-center">
-        <%= image_tag "chevron.svg", class:"icons text-center" %>
+
+
+      <a href="#" class="back-to-top">
+        <%= image_tag "chevron.svg", class:"icons" %>
         <!-- <a href="#top"><i id="top-chevron" class="fas fa-chevron-up"></i></a> -->
-      </div>
+      </a>
+
+
 
   </div>
 </div>
